# streamberry-obs

./: ARCHITECTURE.md  CMakeLists.txt  QUICKSTART.md  README.html  README.md  RELEASE.md  build.sh  make-release.sh  test-system-obs.sh
src/: berrystreamcam-source.cpp  berrystreamcam-source.hpp  common.hpp  plugin-main.cpp
src/decoder/: h264-decoder.cpp  h264-decoder.hpp
src/discovery/: device-discovery.cpp  device-discovery.hpp  mdns-scanner.cpp  mdns-scanner.hpp
src/protocols/: frame-queue.cpp  frame-queue.hpp  http-handler.cpp  http-handler.cpp.backup  http-handler.cpp.old  http-handler.hpp  rtsp-handler-ffmpeg.cpp  rtsp-handler.cpp  rtsp-handler.hpp  websocket-handler.cpp  websocket-handler.hpp
src/ui/: device-list-widget.cpp  device-list-widget.hpp
tests/: CMakeLists.txt  README.md  test_integration.cpp  test_websocket_handler.cpp
